2012-05-04  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* configure.ac, util/benchmark.pl: Merge curses, ncurses and pdcurses targets
  - appropriate curses library is now autodetected or selected explicitely by
  --with-gui configure option.
* ui.c: Fix segfault in the ROM Locations menu.


2012-05-01  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* devices.c, ide_internal.h, input.c, log.c, pbi_scsi.c, sio.c, ui.c, util.h,
  dos/dos_ints.h: Fix some GCC warnings.


2012-04-22  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* colours.[ch], colours_ntsc.[ch], colours_pal.[ch], ui.c, sdl/input.c,
  atari800.man, DOC/USAGE: More exact emulation of PAL colors, including
  colour delay - based on Altirra but with different table coeffitients,
  derived from a real machine. Colour delay values for NTSC rescaled to
  simplify the code.


2012-04-21  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* sdl/input.c: Make the display adjustment keyboard shortcuts work by pressing
  and holding - no more need to press the keys repeatedly.
* colours_ntsc.[ch], colurs_pal.c, colours.[ch], filter_ntsc.c, ui.c,
  sdl/input.c, atari800.man, DOS/USAGE: Rename color control "Hue" to "Tint".
  Add tint control also for PAL mode, as there are PAL TVs with tint control.


2012-03-31  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cartridge.[ch], ui.c, atari800.man, DOC/cart.txt, DOC/USAGE: Added support
  for the cartridge mapping used by "Monkey Wrench II for the Atari XL".


2012-03-29  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cartridge.[ch], ui.c, atari800.man, DOC/cart.txt: Renamed MicroCalc
  cartridge mapping to Ultracart - that's the name printed at the cartridge's
  PCB.


2012-03-26  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cartridge.[ch], ui.c, atari800.man, DOC/cart.txt, DOC/USAGE: Added support
  for the MicroCalc cartridge mapping.


2012-03-24  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* atari.c, cfg.c, memory.[ch], ui.c: Simplify Axlon RAM code. Fix bug with